--- a/testcontrol3.html
+++ b/testcontrol3.html
@@ -416,7 +416,7 @@
       char.jumpCounter = 0; // (Using impulse jump now.)
       char.slingCharge = 0;
       const size = 20;
-      const torsoOptions = { friction: 6.0, frictionAir: 0.11, restitution: 0 };
+      const torsoOptions = { friction: 6.0, frictionAir: 0.11, restitution: .5 };
       const defaultOptions = { friction: 0.5, frictionAir: 0.01, restitution: 0 };
       
       const hpContainer = document.createElement("div");
