Update game copy 5.html

--- a/tests/game copy 5.html
+++ b/tests/game copy 5.html
@@ -753,7 +753,7 @@
             
             // Add position
             positions.push(worldX, height, worldZ);
-            
+            this.terrain.scale.set(2, 1, 2);
             // Enhanced color based on height with more dramatic transitions
             if (height < 5) {
               // Water/beach
